syntax = "proto3";

package booking;

option go_package = "github.com/sbaitmangalkar/booking-client-grpc-api/v1/proto";
option java_multiple_files = true;
option java_package = "com.sbaitman.booking.grpc.streaming";
option java_outer_classname = "MovieBookingProto";
option objc_class_prefix = "RTG";

service MovieBookingService {
  rpc makeBooking(BookingQuery) returns (BookingDetails) {}

  rpc getBookingDetails(BookingQuery) returns (BookingDetails) {}

  rpc getAllBookingsByLocation(BookingQuery) returns (stream BookingDetails) {}

  rpc getAllBookingsByName(BookingQuery) returns (stream BookingDetails) {}

  rpc getAllBookingsByMovie(BookingQuery) returns (stream BookingDetails) {}
}

message BookingQuery {
  string id = 1;
  string movie = 2;
  string booking_name = 3;
  string booking_email = 4;
  string location = 5;
  string date = 6;
}

message BookingDetails {
  string id = 1;
  string movie = 2;
  string booking_name = 3;
  string booking_email = 4;
  string date = 5;
  string location = 6;
  string screen = 7;
  int32 seat_number = 8;
  string status = 9;
}